@startuml

title __CONFIG's Class Diagram__\n

  namespace com.kade.mcps {
    namespace config {
      class com.kade.mcps.config.ApplicationConfig {
          + ApplicationConfig()
          + authenticationManager()
          + authenticationProvider()
          + passwordEncoder()
          + userDetailsService()
      }
    }
  }
  

  namespace com.kade.mcps {
    namespace config {
      class com.kade.mcps.config.JwtConfigurer {
          + JwtConfigurer()
          + configure()
      }
    }
  }
  

  namespace com.kade.mcps {
    namespace config {
      class com.kade.mcps.config.SecurityConfiguration {
          - authenticationProvider : AuthenticationProvider
          + SecurityConfiguration()
          + corsFilter()
          + filterChain()
      }
    }
  }
  

  com.kade.mcps.config.ApplicationConfig o-- com.kade.mcps.repository.UserRepository : repository
  com.kade.mcps.config.JwtConfigurer -up-|> org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer
  com.kade.mcps.config.JwtConfigurer o-- com.kade.mcps.security.JwtTokenProvider : jwtTokenProvider
  com.kade.mcps.config.SecurityConfiguration o-- com.kade.mcps.security.JwtAuthenticationEntryPoint : authenticationEntryPoint
  com.kade.mcps.config.SecurityConfiguration o-- com.kade.mcps.filter.CustomAuthorizationFilter : customAuthorizationFilter
  com.kade.mcps.config.SecurityConfiguration o-- com.kade.mcps.security.JwtTokenProvider : jwtTokenProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
